Hide a toast correctly just after unlocking

There was the bug that a toast didn't get hidden if it was removed
just after unlocking the screen. This bug had been introduced by
http://crrev.com/14d02a5c2534e5825aea10ca1aa5f9a97fbf7983 [formerly b7c2ea2a2ca1fa8b7eb8aece0bee0a965735dcda].

Toast changes the window container which it belongs to referring
the current device lock status: locked or unlocked, because chrome
os has different window containers for locked and unlocked desktop.

That commit had changed the timing of changing the window container and
that had caused the bug. We had the code not to hide a toast on animation,
but that change had added an animation on the changing.

This CL removes the code, since it is no longer necessary because the
change timing was changed.

Bug: 887800
Test: manual

Change-Id: I2942227af9bc9eebb8c5881920341f25d68e91d5
Reviewed-on: https://chromium-review.googlesource.com/1235513
Commit-Queue: Yoshiki Iguchi <yoshiki@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593059}
Former-commit-id: a5a00728256156294aeedd775dc300282f1ad096